--- a/index.css
+++ b/index.css
@@ -1,22 +1,24 @@
+html{
+  scroll-behavior: smooth;
+ }
+  body{
+    font-family: "Loto Sans", "Noto Sans Variable", "Noto Sans", "Segoe UI", Helvetica, Arial, sans-serif;;
+    color: #9ea3a3;
+    font-size: 25px;
+  
+    background-color:#12343b;
+    /* #49274a; */
+  }
+
 #navbar {
     overflow: hidden;
     background-color: #333;
     display: flex;
     justify-content: space-between;
-    background-color: #f4decb;
+    background-color:#e1b382;
     color: black;
   }
- html{
-  scroll-behavior: smooth;
- }
-  body{
-    font-family: "Canva Sans", "Noto Sans Variable", "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;;
-    color: #9ea3a3;
-    font-size: 25px;
-  
-    background-color:#10302b;
-    /* #49274a; */
-  }
+ 
   
   /* Navbar links */
   #navbar a {
@@ -29,16 +31,17 @@
     
    
   }
+  #navbar a:hover{
+    text-decoration: underline;
+  }
   
   #nav{
     display: flex;
     justify-content: end;
     align-content: flex-end;
-    margin-left: 45%;
+    
   }
-  #logo{
-    width: 50%;
-  }
+  
 
   /* Page content */
 
@@ -49,7 +52,7 @@
  a:visited, a:hover{
     
     
-    font-size: 105%;
+   
     color: white;
 
     text-decoration: underline;
@@ -60,17 +63,13 @@
     text-decoration: none;
   }
   
-  a:visited {
-    text-decoration: none;
-  }
+  
   
   a:hover {
     text-decoration: underline;
   }
   
-  a:active {
-    text-decoration: underline;
-  }
+  
   
   /* The sticky class is added to the navbar with JS when it reaches its scroll position */
   .sticky {
@@ -95,13 +94,18 @@
     margin-left: 10%;
   }
   
+  
+
+  /* PROJECTS SECTION */
+
   #project h1{
+    margin-top: 250px;
     text-align: center;
     color:#f4decb;
    
   }
   #p1{
-    background-color:#4d774e;;
+    background-color:#2d545e;
     display: flex;
     margin: 2% 20%;
     color:#e6fade;
@@ -123,12 +127,16 @@
 
   }
 
+  #p1 p{
+    font-size: 20px;
+  }
+
    #project button {
     color: white;
     background-color:#10302b;
    
-    padding: 2% ;
-    border-radius: 10%;
+    padding: 3% ;
+    border-radius: 15%;
   
     border: none;
 
@@ -142,6 +150,12 @@
   #myPics{
 
     width:25%;
-    margin-left: 5%;
+   margin-left: 50%;
   }
   
+
+  /* ABOUT ME SECTION */
+
+  #aboutMe{
+    text-align: center;
+  }
