--- a/index3.css
+++ b/index3.css
@@ -1,60 +1,166 @@
-html{
+:root{
+  --navy-blue:#2d545e ;
+  --navy-blue_shadow:#12343b ;
+  --tan:#e1b382 ;
+  --tan_shadow: #c89666;
+  --background: rgb(2,0,36);
+  --background: radial-gradient(circle, rgba(2,0,36,0.9026961126247374) 0%, rgba(225,179,130,1) 35%, rgba(18,52,59,1) 100%); 
+  --white: #F8F8FF;
+  --silver: #C0C0C0;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
+
+  html{
     scroll-behavior: smooth;
    }
-    body{
-      font-family: "Loto Sans", "Noto Sans Variable", "Noto Sans", "Segoe UI", Helvetica, Arial, sans-serif;;
-      color: #9ea3a3;
+  body{
+      font-family: "Champion, Impact, sans-serif";
+      color: 	#F8F8FF;
       font-size: 25px;
-    
-      background-color:#12343b;
-      /* #49274a; */
     }
-  
-  #navbar {
-      overflow: hidden;
-      background-color: #333;
-      display: flex;
+    
+
+    /* navbar */
+
+ .page-header {
+      background-color: var(--navy-blue);
+    
+      display: flex; 
       justify-content: space-between;
-      background-color:#e1b382;
-      color: black;
-    }
+      padding: 3% 2%;
+      
+  }
+  .nav-bar a{
    
+    margin-left: 2%;
+    color: var(--tan);
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     
-    /* Navbar links */
-    #navbar a {
-      float: left;
-      display: block;
-      color: black;
-      text-align: center;
-      padding: 14px;
-      text-decoration: none;
-      
-     
-    }
-    #navbar a:hover{
-      text-decoration: underline;
-    }
-    
-    #nav{
-      display: flex;
-      justify-content: end;
-      align-content: flex-end;
-      
-    }
-    
+  }
+
+  .nav-bar a:hover{
+    text-decoration:overline;
   
+  }
+  
+  .nav-bar{
+   width: 40%;
+  }
+
+  .menu-icon {
+    color: var(--silver);
+    cursor: pointer;
+    display: none;
+
+
+}
+
+/* responsive */
+@media screen and (max-width: 850px) {
+    .menu-icon {
+        display: block;
+        margin-right: 5%;
+   }
+   .nav-bar {
+    display: none;
+   
+    position: absolute;
+    top: 3.7rem;
+    left: 0;
+    color: var(--navy-blue_shadow);
+    width: 100%;
+    background-color: var(--silver);
+    text-align: end;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+   
+}
+
+.nav-bar.responsive  {
+   display: block;
+   transition: 0.3s;
+  
+   transition: all 0.3s ease;
+  
+}
+.nav-bar a {
+  display: block;
+  padding-right: 10%;
+  color: var(--navy-blue_shadow);
+
+  transition: all 0.3s ease;
+  
+}
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+
+.container {
+  color: #e5e5e5;
+  font-size: 5px;
+  text-transform: uppercase;
+  
+  
+  align-items: center;
+  justify-content:center;
+  padding: 10%;
+}
+
+.animation {
+  height:50px;
+  overflow:hidden;
+  margin-left: 1rem;
+  font-size: 5px;
+}
+
+.animation > div > div {
+  padding: 0.25rem 0.75rem;
+  height:2.81rem;
+  margin-bottom: 2.81rem;
+  display:inline-block;
+}
+
+.animation div:first-child {
+  animation: text-animation 10s infinite;
+}
+
+.first div {
+  color: black;
+  background-color:var(--silver);
+  display: block;
+}
+.second div {
+  background-color:var(--tan);
+}
+
+.container p{
+  display: block;
+}
+
+
+
+
+}
+  
+ 
+    
+    #icon{
+        position: 10px;
+        margin-top: 2%;
+        padding: 0px 10px;
+    }
+
+    
     /* Page content */
   
-    .content {
-      padding: 16px;
-    }
-  
    a:visited, a:hover{
-      
-      
-     
       color: white;
-  
       text-decoration: underline;
       text-decoration: dotted;
       
@@ -63,14 +169,18 @@ html{
       text-decoration: none;
     }
     
-    
-    
     a:hover {
       text-decoration: underline;
     }
     
     
     
+    .content {
+      padding: 16px;
+      background: rgb(2,0,36);
+      background: radial-gradient(circle, rgba(2,0,36,0.9026961126247374) 0%, rgba(225,179,130,1) 35%, rgba(18,52,59,1) 100%); 
+    }
+  
     /* The sticky class is added to the navbar with JS when it reaches its scroll position */
     .sticky {
       position: fixed;
@@ -81,93 +191,214 @@ html{
     /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
     .sticky + .content {
       padding-top: 60px;
+
     }
+   
+   
+
+    /* Intro */
+    @import url('https://fonts.googleapis.com/css?family=Roboto:700');
+
+body {
+  font-family:'Roboto';
+ 
+}
+p {
+  text-shadow: 0 0 7px rgba(255,255,255,.3), 0 0 3px rgba(255,255,255,.3);
+}
+.container {
+  color: #e5e5e5;
+  font-size: 2.26rem;
+  text-transform: uppercase;
+  
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  padding: 10%;
+}
+
+.animation {
+  height:50px;
+  overflow:hidden;
+  margin-left: 1rem;
+}
+
+.animation > div > div {
+  padding: 0.25rem 0.75rem;
+  height:2.81rem;
+  margin-bottom: 2.81rem;
+  display:inline-block;
+}
+
+.animation div:first-child {
+  animation: text-animation 10s infinite;
+}
+
+.first div {
+  color: black;
+  background-color:var(--silver);
+}
+.second div {
+  background-color:var(--navy-blue_shadow);
+}
+.third div {
+  background-color:#c10528;
+}
+
+@keyframes text-animation {
+  0% {margin-top: 0;}
+  10% {margin-top: 0;}
+  20% {margin-top: -5.62rem;}
+  30% {margin-top: -5.62rem;}
+  40% {margin-top: -11.24rem;}
+  60% {margin-top: -11.24rem;}
+  70% {margin-top: -5.62rem;}
+  80% {margin-top: -5.62rem;}
+  90% {margin-top: 0;}
+  100% {margin-top: 0;}
+}
+
   
     #home{
-      display: flex;
-    }
-   #home img{
-      border-radius: 50%;
-    }
-    .homeLeft{
-      margin-right: 0%;
-      margin-left: 10%;
-    }
-    
-    /* Intro */
-
-    #resume{
-        color: white;
-        background-color:#2d545e;
+       padding: 10px;
+       display: flex;
+       /* border: 1px solid var(--silver); */
+        margin-top: 8%;
+     
+     
+    } 
+   
+     #home img{
+        border-radius: 50%;
+        width:25%;
+        margin-left: 12%;
+      
         
-        padding: 5% ;
-        border-radius: 10%;
+      }
+      .homeLeft{
+     
+       width:60%;
+       
+      }
+
+   
       
-      
-    }
+/* CSS */
+.button-54 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  right: -12%;
+}
+
+.button-54 a{
+  color: #000;
+}
+
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+@media (min-width: 768px) {
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
+}
   
     /* PROJECTS SECTION */
   
-    #project h1{
-      margin-top: 250px;
-      text-align: center;
-      color:#f4decb;
-     
-    }
-    #p1{
-      background-color:#2d545e;
+  
+    .psec{
       display: flex;
-      margin: 2% 20%;
-      color:#e6fade;
-      padding: 5px;
-    }
-    #p1 img{
-      margin: 5%;
-      border:2px solid  #0c2b47 ;
-  
-    }
-    button {
-      color: white;
-      background-color:#699569;
+      width: 80%;
+      margin: auto;
+      border: 1px solid black;
       
-      padding: 10% ;
-      border-radius: 15%;
-    
-      border: none;
-  
     }
 
+    #p1{
+      background-color:#2d545e;
+      /* display: flex; */
+       margin: 1%;
+     
+      width: 25%;
+      margin: auto;
+      padding: 2%;
+      height: 50vh;
+    
+    }
+    #project {
+      text-align: center;
+      margin-top: 10%;
+    }
+   
+    #project h1{
+      color: var(--navy-blue_shadow);
+ 
+      text-shadow: 2px 2px var(--silver);
+    }
    
   
     #p1 p{
-      font-size: 20px;
+      font-size: 18px;
     }
   
-     #project button {
-      color: white;
-      background-color:#10302b;
      
-      padding: 3% ;
-      border-radius: 15%;
-    
-      border: none;
-  
-    }
     
     #p1 img{
-      width:30%;
+      width:90%;
+      margin: auto;
     }
   
   
-    #myPics{
-  
-      width:25%;
-     margin-left: 50%;
-    }
-    
+   
   
     /* ABOUT ME SECTION */
   
     #aboutMe{
+      margin-top: 12%;
       text-align: center;
+      background-color: var(--tan_shadow);
+      padding: 4%;
+    }
+
+    .about img{
+      width: 25%;
+      border-radius: 25%;
+    }
+
+    .about{
+      display: flex;
+      justify-content: space-evenly;
+    }
+    #aboutMe h1{
+      color: var(--navy-blue_shadow);
+ 
+     text-shadow: 2px 2px var(--silver);
+    
+    }
+    #aboutMe h1:hover{
+     text-decoration: underline;
+     transition: 3s ease-in;
+     
+    }
+    .about p{
+      margin-top: 2%;
+      width: 50%;
+      text-align: center;
+      align-items: center;
+      color: var(--navy-blue);
     }
