--- a/index3.css
+++ b/index3.css
@@ -25,6 +25,7 @@
       font-size: 25px;
       
       overflow-x: hidden;
+      /* overflow-y: hidden; */
     }
     
 
@@ -56,7 +57,7 @@
   
   .nav-bar{
    width: 40%;
-   border: 2px solid red;
+   
   }
 
   .menu-icon {
@@ -601,7 +602,7 @@ margin-bottom: 2%;
     width: 5%;
   }
 #contact div:last-child img{
-  width:10%
+  width:100%
 }
   
   
